# my-zkp

./: .gitignore  Cargo.toml  DEMO_UI_OVERVIEW.md  HACKATHON_PROJECT_SPEC.md  README.md  ZK_README.md  package-lock.json  time_prover_1024.err  time_prover_256.err  time_verifier_256.err
demo-ui/: .gitignore  DEMO_GUIDE.md  DEMO_SCENARIOS.md  README.md  package-lock.json  package.json  start-demo.sh  tailwind.config.js  vite.config.ts
patients/: README.md  p001-approve.json  p002-needs-pa.json  p003-deny-age.json  p004-deny-pregnant.json  p005-deny-pos.json  p006-deny-units.json  p007-mri-approve.json  p008-mri-deny-old.json  p009-boundary-age-18.json  p010-ct-male-pregnant-check.json  p011-medicare-colonoscopy.json  p012-pt-approve.json  p013-pt-deny-units.json  p014-drug-approve.json  p015-drug-deny-pregnant.json  p016-dental-medicaid.json
policies/: 11400.json  15820.json  17311.json  22856.json  27130.json  27132.json  27138.json  27486.json  29799.json  36223.json  36245.json  36246.json  36254.json  43236.json  43244.json  43247.json  43248.json  43249.json  43254.json  43255.json  51798.json  66397.json  67901.json  67903.json  67904.json  67908.json  67914.json  67922.json  67923.json  70551.json  71250.json  75600.json  75716.json  86001.json  90834.json  90836.json  90837.json  90838.json  90865.json  90868.json  (+45 more)
policies_backup/: UHC-COMM-BIOPSY-001.json  (+3 more)
zk-agent/: Cargo.toml  README.md
zk-agent/src/: commitment.rs  criterion.rs  decision.rs  icd_map.rs  lib.rs  main.rs  patient.rs  policy.rs  trace.rs
zk-agent/src/cli/: mod.rs  prove.rs  verify.rs
(+317 files in other folders)
