[package]
name = "zk-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# ZKP engine (local dependency)
myzkp = { path = "..", features = ["dev-srs"] }

# Ark ecosystem (for field operations and serialization)
ark-ff = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"
rand = "0.8"

# CLI
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"

# Encoding
hex = "0.4"
base64 = "0.21"

# Utilities
lazy_static = "1.4"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "authz"
path = "src/main.rs"

[lib]
name = "zk_agent"
path = "src/lib.rs"

